# ML_TEMPLATE

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: README.md
notebook/: README.md
script/: template.py
