
[build-system]
requires = ["setuptools"]

[project]
name = "<package-name>"
version = "0.1"

authors = [
  {name = "<Authors>"},
]

description=""
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Deeplearning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[tool.setuptools]
packages = ["<package-name>"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E", "W",  # Pycodestyle
  "F",  # Pyflakes
  "I",  # Isort
]

ignore = [
  "E501",  # line too long
  "E402",  # module level import not at top of file
  "F403",  # unable to detect undefined names
  "F405",  # name may be undefined, or defined from star imports
  "I001",  # import block is unsorted or unformatted
  "E731",  # do not use labmda
]
